iocn align fixed

--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -616,7 +616,7 @@
         padding: 0.2rem 0.5rem;
 
         i {
-          transform: translateY(-2.5px);
+          transform: translateY(-0.24rem);
         }
       }
     }
