--- a/css/main.css
+++ b/css/main.css
@@ -2027,7 +2027,7 @@ p {
 }
 
 .faculty .social-link li a i {
-  transform: translateY(-2.5px);
+  transform: translateY(-0.24rem);
 }
 
 .recruitment {
